objects/PRMTransactionCatalog__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date(Deprecated)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExternalValue__c</fullName>
        <label>External Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PurchaseValue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Purchase Value(Deprecated)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adjust</fullName>
                    <label>Adjustment</label>
                </value>
                <value>
                    <fullName>Bonus</fullName>
                </value>
                <value>
                    <fullName>Code Insert</fullName>
                    <label>Code Entry</label>
                </value>
                <value>
                    <fullName>Community Post</fullName>
                </value>
                <value>
                    <fullName>Attended Event</fullName>
                    <label>Event</label>
                </value>
                <value>
                    <fullName>First Invoice Approved</fullName>
                </value>
                <value>
                    <fullName>Invoice Approved</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>ORF</fullName>
                    <label>Opportunity Registration</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Others</label>
                </value>
                <value>
                    <fullName>Expiry</fullName>
                    <label>Point Expiry</label>
                </value>
                <value>
                    <fullName>Point Transfer</fullName>
                </value>
                <value>
                    <fullName>Retailer&apos;s income</fullName>
                    <label>Product Sale</label>
                </value>
                <value>
                    <fullName>PRM Invoice</fullName>
                    <label>Purchase</label>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                    <label>Purchase-Legacy</label>
                </value>
                <value>
                    <fullName>Referral - Step 1</fullName>
                    <label>Referral</label>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>Revert</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                    <label>Sales Promotion</label>
                </value>
                <value>
                    <fullName>Tweet</fullName>
                    <label>Social Media Post</label>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction Catalog</label>
    <nameField>
        <label>Transaction Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>